# microservice

./: pyproject.toml  uv.yml
gateway/: main.py
todo_service/: .dockerignore  auth.py  database.py  dependencies.py  hello.py  main.py  models.py  pyproject.toml  redis_db.py  schemas.py  todos.db
todo_service/alembic/: env.py
todo_service/alembic/versions/: 40f729757448_initial_migration.py  5a476a8a6801_initial_migration.py
todo_service/app/: main.py
todo_service/app/core/: auth.py  config.py  database.py  dependencies.py  redis_db.py
todo_service/app/models/: models.py
todo_service/app/repository/: list_repo.py
todo_service/app/routers/: lists_routes.py  notification.py  todos_route.py
todo_service/app/schemas/: schemas.py
todo_service/app/service/: todo_service.py
todo_service/app/utils/: rabbitmq.py  rabbitmq.py.bak
todo_service/core/: auth.py  config.py  database.py  dependencies.py  redis_db.py
todo_service/crud/: lists.py  todos.py
todo_service/data/: todos.sqlite3
todo_service/routers/: lists.py  todos.py
todo_service/tests/: test_main.py
todo_service/todos/: models.py  schemas.py  schemas.py.bak
todo_service/todos/crud/: lists.py  todos.py
todo_service/todos/repository/: list_repo.py  todo_repo.py
user_service/: .dockerignore  .env  Dockerfile  alembic.ini  main.py  pyproject.toml  redis_db.py  test.db  user_manage.py
user_service/alembic/: env.py  script.py.mako
user_service/app/: main.py  user_manage.py
user_service/app/core/: database.py  (+1 more)
user_service/core/: config.py  redis_db.py
user_service/data/: users.sqlite3
(+9 files in other folders)
